<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:background="@color/white"
        android:id="@+id/appLogoImage"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Brain Battle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogoImage" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/codeHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_code"
            android:textColor="@color/font_primary"
            android:textColorHint="@color/font_primary" />

        <EditText
            android:maxLength="6"
            android:id="@+id/editCodeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/font_primary"
            android:ems="10"
            android:hint="@string/room_code_hint"
            android:inputType="textPersonName"
            android:textColor="@color/font_primary"
            android:textColorHint="@color/font_hint" />

        <TextView
            android:id="@+id/editRoomCodeTextCount"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0/6"
            android:textColor="@color/light_green"/>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/nameHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/font_primary"
            android:textColorHint="@color/font_primary" />

        <EditText
            android:maxLength="12"
            android:id="@+id/editNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/font_primary"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:textColor="@color/font_primary"
            android:textColorHint="@color/font_hint" />

        <TextView
            android:id="@+id/usernameTextCount"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0/12"
            android:textColor="@color/light_green"/>

    </LinearLayout>

    <LinearLayout
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:layout_marginVertical="10dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_primary_bg"
            android:id="@+id/joinBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_btn" />

        <Button
            app:backgroundTint="@null"
            android:textColor="@color/dark_green"
            android:background="@drawable/button_secondary_bg"
            android:id="@+id/createBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_btn" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/progressBarLoadingText"
        android:textSize="21sp"
        android:textColor="@color/light_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="Loading Quiz..."
        app:layout_constraintEnd_toEndOf="@+id/progressBarLoading"
        app:layout_constraintStart_toStartOf="@+id/progressBarLoading"
        app:layout_constraintTop_toBottomOf="@+id/progressBarLoading" />

</androidx.constraintlayout.widget.ConstraintLayout>